--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -214,7 +214,7 @@
                                                             Grid.Row="2"
                                                             Grid.Column="0"
                                                             Margin="10,5,10,5">
-                                                    <TextBlock Text="Startdato: "
+                                                    <TextBlock Text="Start: "
                                                                Margin="0,0,5,0" />
                                                     <TextBlock Text="{Binding ProjectBeginDate.Date.Day}"
                                                                Margin="0,0,0,0" />
@@ -226,7 +226,7 @@
                                                                Margin="0,0,0,0" />
                                                     <TextBlock Text="{Binding ProjectBeginDate.Date.Year}"
                                                                Margin="0,0,5,0" />
-                                                    <TextBlock Text="Slutdato: "
+                                                    <TextBlock Text="Slut: "
                                                                Margin="15,0,5,0" />
                                                     <TextBlock Text="{Binding ProjectEndDate.Date.Day}"
                                                                Margin="0,0,0,0" />
